<resources>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">525154015032971</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb525154015032971</string>

    <!-- Application purposes -->
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- Drawer menu strings -->
    <string name="drawer_item_your_lunch">Your lunch</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_log_out">Log out</string>
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>

    <!-- Toolbar strings -->
    <string name="default_title">I\'m hungry !</string>

    <!-- UX SigninActivity purposes -->
    <string name="logged_in_success">Logged in successfully</string>
    <string name="logged_in_failed">Logged in failed</string>
    <string name="logged_in_failed_no_network">There is no available network</string>
    <string name="logged_in_failed_unknown_error">An unknown error occured</string>
    <string name="user_current_location_not_found">Unable to find current location</string>
    <string name="log_out">You have been logged out</string>
    <string name="twitter_consumer_key" translatable="false">EDVTWGv3tm9LvVy8hZB1TMj2y</string>
    <string name="twitter_consumer_secret" translatable="false">pyAJ8Ngym7LUukVGiokpv7xkzXe3poyPtbHZBD6Pz4dXJXCwpU</string>

    <!-- Bottom navigationview strings -->
    <string name="title_map">Map</string>
    <string name="title_restaurants">Restaurants list</string>
    <string name="title_workmates">Workmates available</string>

    <!-- Recyclerview workmates -->
    <string name="workmate_not_chosen">hasn\'t decided yet</string>

    <!-- Detail Restaurant View -->
    <string name="detail_restaurant_phone">CALL</string>
    <string name="detail_restaurant_like">LIKE</string>
    <string name="detail_restaurant_website">WEBSITE</string>
    <string name="searchbar_restaurant_hint">Search for a restaurant</string>
    <string name="more_details">see more details</string>

    <!-- Recyclerview Restaurant -->
    <string name="restaurant_status_opened">Opened</string>
    <string name="restaurant_status_closed">Closed</string>
    <string name="restaurant_proximity_metric">meters</string>
    <string name="workmate_choice">is eating at :</string>

    <!-- Google Map purposes -->
    <string name="custom_marker_url" translatable="false">https://cdn.onlinewebfonts.com/svg/img_57428.png</string>
    <string name="detail_restaurant_choice">"You choose  : "</string>
    <string name="drawer_item_current_lunch_not_selected">You didn\'t choose a restaurant yet</string>

    <!-- Notification purposes -->
    <string name="notification_name" translatable="false">Go4Lunch notification</string>
    <string name="notification_title">"Remember today, you have planned some lunch at : "</string>
    <string name="notification_desc">With : </string>
    <string name="channel_name" translatable="false">lunch notification</string>
    <string name="channel_description" translatable="false">This is a reminder sending an alarm at 12 a.m for user choice</string>

</resources>