<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.go4lunch.fragments.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_restaurants"
        android:name="com.example.go4lunch.fragments.restaurants.RestaurantsFragment"
        android:label="@string/title_restaurants"
        tools:layout="@layout/fragment_restaurants" />

    <fragment
        android:id="@+id/navigation_workmates"
        android:name="com.example.go4lunch.fragments.workmates.WorkmatesFragment"
        android:label="@string/title_workmates"
        tools:layout="@layout/fragment_workmates" />


</navigation>
