<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/detail_restaurant_material_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:checkedIconTint="#00FF48">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_restaurant_pic"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <RelativeLayout
                android:id="@+id/detail_restaurant_all_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_restaurant_pic"
                android:backgroundTint="@color/colorPrimaryDark2">

                <LinearLayout
                    android:id="@+id/detail_restaurant_layout_infos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/detail_restaurant_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="Le zinc"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/detail_restaurant_star1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:tint="#FFE500"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_baseline_star_24" />

                        <ImageView
                            android:id="@+id/detail_restaurant_star2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:tint="#FFE500"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_baseline_star_24" />

                        <ImageView
                            android:id="@+id/detail_restaurant_star3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:tint="#FFE500"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_baseline_star_24" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/detail_restaurant_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="12 rue du Faubourd Poissonière"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_restaurant_layout_infos"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/detail_restaurant_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_phone_24"
                        android:text="@string/detail_restaurant_phone"
                        app:strokeColor="@color/colorPrimary2" />

                    <Button
                        android:id="@+id/detail_restaurant_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_star_24"
                        android:text="@string/detail_restaurant_like"
                        app:strokeColor="@color/colorPrimaryDark2" />

                    <Button
                        android:id="@+id/detail_restaurant_website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/ic_baseline_language_24"
                        android:text="@string/detail_restaurant_website"
                        app:strokeColor="@color/colorPrimaryDark2" />

                </LinearLayout>


            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/workmates_recyclerview"
                android:name="com.example.go4lunch.fragments.WorkmatesFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/detail_restaurant_all_infos"
                android:scrollbars="vertical" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>